latest version blah blah

--- a/luke.html
+++ b/luke.html
@@ -5,19 +5,18 @@
 		<script src=" "></script>
 	</head>
 	<body>
-		<ul>
-			<li class="navButton">
-				Button1
-			</li>
-			<li class="navButton">
+		<div id="navWrapper">
+			<a href="declan.html"><div class="navButton">
+				Declan
+			</div></a>
+			<a><div class="navButton">
 				Button2
-			</li>
-			<li class="navButton">
+			</div></a>
+			<a><div class="navButton">
 				Button3
-			</li>
-		</ul>
-		
-		
+			</div></a>
+			
+		</div>
 		
 	</body>
 </html>
