--- a/mikhail.html
+++ b/mikhail.html
@@ -1,9 +1,29 @@
 <html>
   <head>
     <title> I AM THE MASTER OF ALL </title>
-  </head>
+    <style type="text/css">
+body
+{
+background-color:#00FFF7;
+}
+h1
+{
+color:orange;
+text-align:center;
+}
+p
+{
+font-family:"Times New Roman";
+font-size:20px;
+}
+</style>
+</head>
 
   <body>
-    <h1> KEEP OUT </h1>
+
+    <h1> THIS IS THE PROPERTY OF THE SHADOW LORD </h1>
+
+    <p> <a href="benji.html">GO HERE AND MEET YOUR DOOM!</a> </p>
+
   </body>
 </html>
