--- a/mikhail.html
+++ b/mikhail.html
@@ -25,5 +25,8 @@ font-size:20px;
 
     <p> <a href="benji.html">GO HERE AND MEET YOUR DOOM!</a> </p>
 
+    <p> <iframe src="benji.html" width="1000" height="1000"></iframe> </p>
+
+
   </body>
 </html>
