--- a/mikhail.html
+++ b/mikhail.html
@@ -27,6 +27,8 @@ font-size:20px;
 
     <p> <iframe src="benji.html" width="1000" height="1000"></iframe> </p>
 
+    <img border="0" src="/img/button.gif" alt="" width="304" height="228" />
+
 
   </body>
 </html>
