--- a/mikhail.html
+++ b/mikhail.html
@@ -25,7 +25,10 @@ font-size:20px;
 
     <p> <a href="benji.html">GO HERE AND MEET YOUR DOOM!</a> </p>
 
-    <p> <iframe src="benji.html" width="1000" height="1000"></iframe> </p>
+    <p> <form action="form_action.asp" method="get">
+  Current Location: <input type="text" name="Loc" /><br />
+  <input type="submit" value="Submit" />
+</form> </p>
 
     <img border="0" src="/img/button.gif" alt="" width="304" height="228" />
 
