--- a/geolocation-test.html
+++ b/geolocation-test.html
@@ -35,6 +35,8 @@ if (gl) {
 
 </head>
 <body>
+<p>We definately did not copy / steal this. 100% our own work. Yup. No lies.</p>
 <div id="p"></div>
+<p>We definately did not copy / steal this. 100% our own work. Yup. No lies.</p>
 </body>
 </html>
