--- a/HomePage.html
+++ b/HomePage.html
@@ -1,38 +1,18 @@
 <html>
 <head>
 	<title>CSS</title>
-	<link rel="stylesheet" href="Mikhail and Declan's Work - CSS.css"/>
+	<link rel="stylesheet" href="HomePage.css"/>
 	<script src=" "></script>
 </head>
 <body>
 	<div id="navWrapper">
 		<h1>Header 1</h1>
 		<a href=""><div class="navButton">
-			Button1
-		</div></a>
-		<a href=""><div class="navButton">
-			Button2
-		</div></a>
-		<a href=""><div class="navButton">
-			Button3
+			BACK
 		</div></a>
         <div class="clearfloat"></div>
 	</div>
-	<p> Some text</p>
-	<div id="mytable">
-		<table border="1">
-			<tr>
-				<td>-</td>
-				<td>-</td>
-				<td>-</td>
-			</tr>
-			<tr>
-				<td>----</td>
-				<td>----</td>
-				<td>----</td>
-			</tr>
-		</table> 
-	</div>
+	<p> Find out the statistics for </p>
 
 </body>
 </html>
