Formatted text on webpage

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<td>
 			<table width="275" height="273" border="0" background="images/index_04.jpg" cellspacing="0" cellpadding="0">
 			  <tr>
-			    <td>in <span id='placename'>  elstree,hertfordshire</span> during the past month the crime rate is above average. The most freqent crime was murder .there were 158 arrest for this in july. despite this there were not manny arrests for faud. want to know more ?  </td>
+			    <td>In <span id='placename'>  elstree,hertfordshire</span> during the past month the crime rate is above average. The most freqent crime was murder. There were 158 arrest for this in July. Despite this there were not manny arrests for faud. Want to know more ?  </td>
 		      </tr>
 		  </table></td>
 		<td rowspan="2">
