--- a/index.html
+++ b/index.html
@@ -36,5 +36,11 @@
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
+
+<script>
+	$(document).ready(function() {
+		startHere();
+	});
+</script>
 </body>
 </html>
