Made the script actually work

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </table>
 <!-- End Save for Web Slices -->
 
-<script>
+<script type="text/javascript">
 	$(document).ready(function() {
 		startHere();
 	});
