Edits - tables now in!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

--- a/table-statistics.html
+++ b/table-statistics.html
@@ -6,19 +6,19 @@
 	<table border="0">
 		<tr>
 			<td>Murder</td>
-			<td class="a">62</td>
+			<td><span class="a" style="display: inline-block; width: 205px;">205</span</td>
 		</tr>
 		<tr>
 			<td>Burglaries</td>
-			<td class="b">128</td>
+			<td><span class="b" style="display: inline-block; width: 128px;">128</span></td>
 		</tr>
 		<tr>
 			<td>Armed Buglaries</td>
-			<td class="c">57</td>
+			<td><span class="c" style="display: inline-block; width: 62;">62</span></td>
 		</tr>
 		<tr>
 			<td>Fraud</td>
-			<td class="d">205</td>
+			<td><span class="d" style="display: inline-block; width: 57px;">57</span></td>
 		</tr>
 	</table>
 </body>
