--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="geolocation.js"></script>
+<script type="text/javascript" src="dataJS.js"></script>
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (crimeviewer.psd) -->
@@ -40,6 +41,7 @@
 <script type="text/javascript">
 	$(document).ready(function() {
 		startHere();
+		startDataStuff();
 	});
 </script>
 
