--- a/geo.html
+++ b/geo.html
@@ -9,19 +9,34 @@
 function onKnownPosition(position) {
   updatePositionTable(position);
   locateRegionFor(position.coords);
+  locateCrimeInformationFor(position.coords);
 }
 
 function updatePositionTable(position) {
-    $("timestamp").text(position.timestamp);
-    $("latitude").text(position.coords.latitude);
-    $("longitude").text(position.coords.longitude);
+    $("#timestamp").text(position.timestamp);
+    $("#latitude").text(position.coords.latitude);
+    $("#longitude").text(position.coords.longitude);
 }
  
 function onPositionError(positionError) {
   alert(positionError);
 }
 
-function lookUpRegion(coords){
+function locateCrimeInformationFor(coords) {
+
+-u :5d5faaa7ba76287f305755bbfe626dc7 http://policeapi2.rkh.co.uk/api/crimes-street/all-crime?date=2012-08&lat=51.6448352&lng=-0.2980985
+        var url = "http://"
+	$.ajax(url, {
+                username: "ficah53",
+                password: "",
+		success:
+			function (data, status){
+                             alert(data);
+                        }
+                 });
+}
+
+function locateRegionFor(coords){
 	var url = "http://mapit.mysociety.org/point/4326/"+ coords.longitude+","+ coords.latitude;
 	console.log(url);
 	$.ajax(url, {
