--- a/geo.html
+++ b/geo.html
@@ -5,87 +5,35 @@
 <title>Extremely basic example of the W3C Geolocation API</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript">
-function onKnownPosition(position) {
-  updatePositionTable(position);
-  locateRegionFor(position.coords);
-  locateCrimeInformationFor(position.coords);
-}
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
-function updatePositionTable(position) {
-    $("#timestamp").text(position.timestamp);
-    $("#latitude").text(position.coords.latitude);
-    $("#longitude").text(position.coords.longitude);
-}
- 
-function onPositionError(positionError) {
-  alert(positionError);
-}
+    <script type="text/javascript" src="geolocation.js"></script>
 
-function locateCrimeInformationFor(coords) {
-
--u :5d5faaa7ba76287f305755bbfe626dc7 http://policeapi2.rkh.co.uk/api/crimes-street/all-crime?date=2012-08&lat=51.6448352&lng=-0.2980985
-        var url = "http://"
-	$.ajax(url, {
-                username: "ficah53",
-                password: "",
-		success:
-			function (data, status){
-                             alert(data);
-                        }
-                 });
-}
-
-function locateRegionFor(coords){
-	var url = "http://mapit.mysociety.org/point/4326/"+ coords.longitude+","+ coords.latitude;
-	console.log(url);
-	$.ajax(url, {
-		success:
-			function (data, status){
-				console.log(data);
-                                $("response").text(JSON.stringify(data, null, 4));
-
-				for(var key in data){
-					if(data[key].type_name == "District council ward"){
-						console.log(data[key].name);
-						$("#location").text(data[key].name);
-					}
-					
-				}
-			}
-	});
-}
-
-try {
-  if (typeof navigator.geolocation === 'undefined'){
-    alert("Your're browser doesn't support this app!");
-  } else {
-    navigator.geolocation.getCurrentPosition(onKnownPosition, onPositionError);
-  }
-} catch(e) {}
-
-</script>
 
 </head>
 <body>
-	<div id="p">
-	  <table>
-	    <tbody>
-	      <tr>
-		<td>Timestamp</td>		
-		<td id="timestamp"></td>
-	      </tr>
-	      <tr>
-		<td>Latitude</td>
-		<td id="latitude"></td>
-	      </tr>
-	      <tr>
-		<td>Longitude</td>
-		<td id="longitude"></td>
-	      </tr>
-	    </tbody>
-	</div>
-	<p>You are in <span id="location"></span></p>
-	<p id="response"></p>
+    <form>
+        <input type="text" id="lat" value="51.3972055"/>
+        <input type="text" id="long" value="-0.2836998"/>
+        <input type="submit" onclick="dosubmit(); return false;"/>
+    </form>
+
+<div id="placename">
+
+</div>
+
+    <script type="text/javascript">
+
+        function dosubmit() {
+
+            var lat = $("#lat").val();
+            var lng = $("#long").val();
+
+
+            displayAddress(lat,lng);
+        }
+
+    </script>
+
 </body>
 </html>
