--- a/old-html/james.html
+++ b/old-html/james.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>James Was here!</title>
-    <script type="text/javascript" src="static/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="../static/jquery-1.7.2.min.js"></script>
     <style>
        .boring {
 
