- simple place lookup

--- a/geo.html
+++ b/geo.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <form>
-        <input type="text" id="lat" value="51.3972055"/>
-        <input type="text" id="long" value="-0.2836998"/>
+        <input type="text" id="lat" />
+        <input type="text" id="long" />
         <input type="submit" onclick="dosubmit(); return false;"/>
     </form>
 
