Default changed, added id to month

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                         <p>In
                             <span class="location" id='placename'> Elstree, Hertfordshire</span>
                             during the past month, there have been
-                            <span id='crimecount'><b>1000</b></span>
+                            <span id='crimecount'><b>(searching ...)</b></span>
                             crimes. <br>
                         <br>
-                        The most frequent crime was <b>murder</b>. There were <b>158</b> arrests for this crime in
-                            <span class="location">July</span>.
-                            Despite this there were not many arrests for <b>fraud</b>.
+                        The most frequent crime was <b>(searching ...)</b>. There were <b>(searching ...)</b> arrests for this crime in
+                            <span class="location" id="crimemonth">---</span>.
+                            Despite this there were not many arrests for <b>(searching ...)</b>.
                     </p>
 
                         <p><a href="">Want to know more?</a></p></td>
