Location default changed to "(searching...)"

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <tr>
                     <td valign="top">
                         <p>In
-                            <span class="location" id='placename'> Elstree, Hertfordshire</span>
-                            during the past month, there have been
+                            <span class="location" id='placename'> (searching ...)</span>
+                             during the past month, there have been
                             <span id='crimecount'><b>(searching ...)</b></span>
                             crimes. <br>
                         <br>
