gave dead link life

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             Despite this there were not many arrests for <b>(searching ...)</b>.
                     </p>
 
-                        <p><a href="">Want to know more?</a></p></td>
+                        <p><a href="yrs.time4tea.net/statistics.html">Want to know more?</a></p></td>
                 </tr>
             </table>
         </td>
