added spams and changed link

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                             <span id='crimecount'><b>(searching ...)</b></span>
                             crimes. <br>
                         <br>
-                        The most frequent crime was <b>(searching ...)</b>. There were <b>(searching ...)</b> arrests for this crime in
+                        The most frequent crime was <span class="location" id="frequent">(searching ...)</span>. There were <span class="location" id="number">(searching ...)</span> arrests for this crime in
                             <span class="location" id="crimemonth">---</span>.
-                            Despite this there were not many arrests for <b>(searching ...)</b>.
+                            Despite this there were not many arrests for <span class="location" id="rare">(searching ...)</span>.
                     </p>
 
-                        <p><a href="yrs.time4tea.net/statistics.html">Want to know more?</a></p></td>
+                        <p><a href="/statistics.html">Want to know more?</a></p></td>
                 </tr>
             </table>
         </td>
