added class loc to no. of crimes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <p>In
                             <span class="location" id='placename'> (searching ...)</span>
                              during the past month, there have been
-                            <span id='crimecount'><b>(searching ...)</b></span>
+                            <span class="location" id='crimecount'><b>(searching ...)</b></span>
                             crimes. <br>
                         <br>
                         The most frequent crime was <span class="location" id="frequent">(searching ...)</span>. There were <span class="location" id="number">(searching ...)</span> arrests for this crime in
