Made it detect the least common crime

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <br>
                         The most frequent crime was <span class="location" id="frequent">(searching ...)</span>. There were <span class="location" id="number">(searching ...)</span> arrests for this crime in
                             <span class="location" id="crimemonth">---</span>.
-                            Despite this there were not many arrests for <span class="location" id="rare">(searching ...)</span>.
+                            Despite this there were not many incidents of <span class="location" id="rare">(searching ...)</span>.
                     </p>
 
                         <p><a href="/statistics.html">Want to know more?</a></p></td>
