changed id to class

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                     <td valign="top">
                         <p>In
                             <span class="location" id='placename'> (searching ...)</span>
-                             during <span class="location" id="crimemonth">---</span>, there have been
+                             during <span class="location data-crimemonth">---</span>, there have been
                             <span class="location" id='crimecount'><b>(searching ...)</b></span>
                             crimes. <br>
                         <br>
                         The most frequent crime was <span class="location" id="frequent">(searching ...)</span>. There were <span class="location" id="number">(searching ...)</span> arrests for all crimes in
-                            <span class="location" id="crimemonth">---</span>.
+                            <span class="location data-crimemonth">---</span>.
                             Despite this there were not many incidents of <span class="location" id="rare">(searching ...)</span>.
                     </p>
 
