Home link added

--- a/statistics.html
+++ b/statistics.html
@@ -66,6 +66,7 @@
             <td><span class="c" style="display: inline-block; width: 50%;">50</span></td>
         </tr>
     </table>
+    <a href="/">Back to Home Page</a>
 
                     </p>
 
