Changed id to class

--- a/statistics.html
+++ b/statistics.html
@@ -51,7 +51,7 @@
                     <td valign="top">
                         <p>Crimes in
                             <span class="location" id='placename'> (searching ...)</span>
-                             during the past month, <span class="location" id="crimemonth">---</span>. 
+                             during the past month, <span class="location data-crimemonth">---</span>. 
                              <table border="0" width="100%">
         <tr>
             <td width="30%">Murder</td>
