--- a/statistics.html
+++ b/statistics.html
@@ -1,6 +1,13 @@
 <html>
 <head>
     <title>crimeviewer</title>
+    <link rel="stylesheet" href="statstyle.css"/>
+    <style type="text/css">
+a:link {color:#000000;}    /* unvisited link */
+a:visited {color:#000000;} /* visited link */
+a:hover {color:#000000;}   /* mouse over link */
+a:active {color:#000000;}  /* selected link */
+</style>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -53,7 +60,7 @@
                             <span class="location" id='placename'> (searching ...)</span>
                              during the past month, <span class="location data-crimemonth">---</span>. 
                              <table border="0" width="100%">
-        <tr>
+        <tr id= "stats">
             <td width="30%">Murder</td>
             <td><span class="a" style="display: inline-block; width: 100%;">100</span</td>
         </tr>
@@ -66,7 +73,12 @@
             <td><span class="c" style="display: inline-block; width: 50%;">50</span></td>
         </tr>
     </table>
-    <a href="/">Back to Home Page</a>
+    <div id="navWrapper">
+            <a href="/"><div class="navButton">
+                Back to Home Page
+            </div></a>
+        </div>
+
 
                     </p>
 
