Changed the tab title text

--- a/statistics.html
+++ b/statistics.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>crimeviewer</title>
+    <title>Crimeviewer UK - YRS2012</title>
     <link rel="stylesheet" href="statstyle.css"/>
     <style type="text/css">
 a:link {color:#000000;}    /* unvisited link */
