--- a/index.html
+++ b/index.html
@@ -1,69 +1,54 @@
 <html>
 <head>
-    <title>Crimeviewer UK - YRS2012</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="geolocation.js"></script>
-    <script type="text/javascript" src="dataJS.js"></script>
-    <style type="text/css">
-        <!--
-        body {
-            background-image: url(images/bg.jpg);
-            background-repeat: repeat;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 18px;
-        }
-
-        .location {
-            color: #06C;
-            font-size: 20px;
-            font-style: italic;
-        }
-        -->
-    </style>
-</head>
-
+<title>crimeviewer</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<style type="text/css">
+<!--
+body {
+	background-image: url(images/bg.jpg);
+}
+-->
+</style></head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (crimeviewer.psd) -->
-<table width="322" height="385" border="0" align="center" cellpadding="0" cellspacing="0" id="Table_01">
-    <tr>
-        <td colspan="6">
-            <img src="images/crimeviewer_01.png" width="321" height="9" alt=""></td>
-        <td>
-            <img src="images/spacer.gif" width="1" height="9" alt=""></td>
-    </tr>
-    <tr>
-        <td colspan="2" rowspan="2">
-            <img src="images/crimeviewer_02.png" width="27" height="23" alt=""></td>
-        <td>
-            <img src="images/crimeviewer_03.png" width="100%" height="9" alt=""></td>
-        <td colspan="3">
-            <img src="images/crimeviewer_04.png" width="141" height="9" alt=""></td>
-        <td>
-            <img src="images/spacer.gif" width="1" height="9" alt=""></td>
-    </tr>
-    <tr>
-        <td colspan="2" rowspan="3">
-            <table width="267" height="257" bgcolor="#FFFFFF" border="0" cellspacing="0" cellpadding="0">
-                <tr>
-                    <td valign="top">
-                        <p>In
-                            <span class="location" id='placename'> (searching ...)</span>
-                             during <span class="location data-crimemonth">---</span>, there have been
-                            <span class="location" id='crimecount'><b>(searching ...)</b></span>
-                            crimes. <br>
-                        <br>
-                        The most frequent crime was <span class="location" id="frequent">(searching ...)</span>. There were <span class="location" id="number">(searching ...)</span> arrests for all crimes in
-                            <span class="location data-crimemonth">---</span>.
-                            Despite this there were not many incidents of <span class="location" id="rare">(searching ...)</span>.
-                    </p>
+<table width="321" height="461" border="0" align="center" cellpadding="0" cellspacing="0" id="Table_01">
+	<tr>
+		<td colspan="3">
+			<img src="images/index_01.png" width="321" height="85" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			<img src="images/index_02.png" width="321" height="19" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="images/index_03.png" width="17" height="242" alt=""></td>
+		<td>
+			<table width="288" height="242" border="0" background="images/index_04.png" cellspacing="0" cellpadding="0">
+			  <tr>
+			    <td>&nbsp; <p>In
+                    <span class="location" id='placename'> (searching ...)</span>
+                    during <span class="location data-crimemonth">---</span>, there have been
+                    <span class="location" id='crimecount'><b>(searching ...)</b></span>
+                    crimes. <br>
+                    <br>
+                    The most frequent crime was <span class="location" id="frequent">(searching ...)</span>. There were <span class="location" id="number">(searching ...)</span> arrests for all crimes in
+                    <span class="location data-crimemonth">---</span>.
+                    Despite this there were not many incidents of <span class="location" id="rare">(searching ...)</span>.
+                </p>
 
-                        <p><a href="/statistics.html">Want to know more?</a></p></td>
-                </tr>
-            </table>
-        <
+                    <p><a href="/statistics.html">Want to know more?</a></p></td></td>
+		      </tr>
+		  </table></td>
+		<td>
+			<img src="images/index_05.png" width="16" height="242" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			<img src="images/index_06.png" width="321" height="115" alt=""></td>
+	</tr>
 </table>
+<!-- End Save for Web Slices -->
 <script type="text/javascript">
     $(document).ready(function () {
         startHere(
@@ -96,5 +81,7 @@
                 w.attachEvent("onload", gs);
     })(window);
 </script>
+
+
 </body>
 </html>
