--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@ body {
 	background-image: url(images/bg.jpg);
 }
 -->
-</style></head>
+</style> <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="geolocation.js"></script>
+    <script type="text/javascript" src="dataJS.js"></script>
+
+</head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (crimeviewer.psd) -->
 <table width="321" height="461" border="0" align="center" cellpadding="0" cellspacing="0" id="Table_01">
