This will begin to print out to the screen

--- a/statistics.html
+++ b/statistics.html
@@ -60,7 +60,7 @@ a:active {color:#000000;}  /* selected link */
                         <p>Crimes in
                             <span class="location" id='placename'> (searching ...)</span>
                              during the past month, <span class="location data-crimemonth">---</span>. 
-                             <table border="0" width="100%">
+                <table border="0" width="100%" id="crimeGraph">
         <tr id= "stats">
             <td width="30%">Murder</td>
             <td><span class="a" style="display: inline-block; width: 100%;">100</span</td>
