--- a/statistics.html
+++ b/statistics.html
@@ -92,6 +92,8 @@ a:active {color:#000000;}  /* selected link */
         <td>
             <img src="images/spacer.gif" width="1" height="14" alt=""></td>
     </tr>
+	</table>
+	<table width="322" height="385" border="0" align="center" cellpadding="0" cellspacing="0" id="Table_03">
     <tr>
         <td rowspan="4">
             <img src="images/crimeviewer_07.png" width="13" height="353" alt=""></td>
