--- a/statistics.html
+++ b/statistics.html
@@ -14,6 +14,7 @@ a:active {color:#000000;}  /* selected link */
     <script type="text/javascript" src="geolocation.js"></script>
     <script type="text/javascript" src="dataJS.js"></script>
 	<script type="text/javascript" src="statistics.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <style type="text/css">
         <!--
         body {
