--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@ body {
 	background-image: url(images/bg.jpg);
 }
 -->
-</style> <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+</style>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="geolocation.js"></script>
     <script type="text/javascript" src="dataJS.js"></script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (crimeviewer.psd) -->
