--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 body {
 	background-image: url(images/bg.jpg);
 }
+
+.location {
+    color: #06C;
+    font-size: 20px;
+    font-style: italic;
+}
+
 -->
 </style>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
