Changed the pre-loading text in statistics.html

--- a/statistics.html
+++ b/statistics.html
@@ -44,20 +44,7 @@ body {
                         <p>Crimes in
                             <span class="location" id='placename'> (searching ...)</span>
                              during the past month, <span class="location data-crimemonth">---</span>. 
-              <div id="crimeGraph">  <table border="0" width="100%">
-        <tr id= "stats">
-            <td width="30%">Murder</td>
-            <td><span class="a" style="display: inline-block; width: 100%;">100</span</td>
-        </tr>
-        <tr>
-            <td>Burglaries</td>
-            <td><span class="b" style="display: inline-block; width: 75%;">75</span></td>
-        </tr>
-        <tr>
-            <td>Burglaries</td>
-            <td><span class="c" style="display: inline-block; width: 50%;">50</span></td>
-        </tr>
-    </table>
+              <div id="crimeGraph"> Loading crime data... </div>
     <div id="navWrapper">
             <a href="/"><div class="navButton">
                 Back to Home Page
